[gd_scene load_steps=17 format=3 uid="uid://qlmh4im4lm3e"]

[ext_resource type="Script" path="res://src/controls/camera.gd" id="2_2uc2b"]
[ext_resource type="Shader" path="res://src/shader/terrain_surface.gdshader" id="4_y0lmg"]
[ext_resource type="Texture2D" uid="uid://c5ssf2pn0vh1d" path="res://etc/dirt_floor_diff_4k.jpg" id="5_6xree"]
[ext_resource type="Shader" path="res://src/shader/water_surface.gdshader" id="5_qkbso"]
[ext_resource type="Script" path="res://src/fluidsim.gd" id="6_ea1n8"]
[ext_resource type="Script" path="res://src/spin_box_fix.gd" id="7_vuo7j"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tbyqg"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vlaij"]
width = 2048
height = 2048
generate_mipmaps = false
noise = SubResource("FastNoiseLite_tbyqg")

[sub_resource type="Texture2DRD" id="Texture2DRD_7ayt4"]

[sub_resource type="Texture2DRD" id="Texture2DRD_cudi2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4te7w"]
render_priority = 0
shader = ExtResource("5_qkbso")
shader_parameter/fluxvis = false
shader_parameter/energyvis = false
shader_parameter/color = Vector4(0.01, 0.03, 0.05, 1)
shader_parameter/heightscale = 50.0
shader_parameter/height_threshold = 0.002
shader_parameter/flux_enhancer = 20000.0
shader_parameter/heightmap = SubResource("Texture2DRD_cudi2")
shader_parameter/fluxmap = SubResource("Texture2DRD_7ayt4")

[sub_resource type="PlaneMesh" id="PlaneMesh_mtqtp"]
size = Vector2(512, 512)
subdivide_width = 512
subdivide_depth = 512

[sub_resource type="Texture2DRD" id="Texture2DRD_l4f3o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_45cfq"]
render_priority = 0
shader = ExtResource("4_y0lmg")
shader_parameter/color = null
shader_parameter/heightscale = 50.0
shader_parameter/heightmap = SubResource("Texture2DRD_l4f3o")
shader_parameter/texturemap = ExtResource("5_6xree")

[sub_resource type="PlaneMesh" id="PlaneMesh_qx3r2"]
resource_local_to_scene = true
size = Vector2(512, 512)
subdivide_width = 512
subdivide_depth = 512

[sub_resource type="BoxShape3D" id="BoxShape3D_wfkfs"]
size = Vector3(512, 1, 512)

[node name="Main" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.0794594, 0.862372, -0.500001, -0.612373, 0.353554, 0.707106, 0.786566, 0.362373, 0.5, -0.18211, 385.337, 0.141829)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.534691, 0.845048, 0, -0.845048, 0.534691, 0, 222.287, 239.145)
script = ExtResource("2_2uc2b")

[node name="Fluidsim" type="Area3D" parent="."]
script = ExtResource("6_ea1n8")
brush_water = 0.01
texture_size = Vector2i(128, 128)
noise_terrain = SubResource("NoiseTexture2D_vlaij")
brush_size = 3

[node name="WaterSurface" type="MeshInstance3D" parent="Fluidsim"]
material_override = SubResource("ShaderMaterial_4te7w")
gi_mode = 2
mesh = SubResource("PlaneMesh_mtqtp")
skeleton = NodePath("../..")

[node name="TerrainSurface" type="MeshInstance3D" parent="Fluidsim"]
sorting_offset = -5.0
material_override = SubResource("ShaderMaterial_45cfq")
mesh = SubResource("PlaneMesh_qx3r2")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fluidsim"]
shape = SubResource("BoxShape3D_wfkfs")

[node name="UI (VBoxContainer)" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="UI (VBoxContainer)"]
layout_mode = 2
columns = 2

[node name="Run" type="CheckButton" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
button_pressed = true
text = "Run"

[node name="Accelerate" type="CheckButton" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Accelerate"

[node name="Button" type="Button" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Single Step"

[node name="Button2" type="Button" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Reset"

[node name="Label" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Acceleration Factor"

[node name="AccelerationFactor" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
min_value = 1.0
value = 10.0
allow_greater = true
script = ExtResource("7_vuo7j")

[node name="Viscosity" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Flow Speed"

[node name="viscosity" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 1000.0
step = 0.01
value = 0.1
script = ExtResource("7_vuo7j")

[node name="Decay" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Wave Decay"

[node name="decay" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 1000.0
step = 0.1
value = 1.0
script = ExtResource("7_vuo7j")

[node name="Decay2" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Height Threshold"

[node name="height_threshold" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 1000.0
step = 0.1
value = 2.0
script = ExtResource("7_vuo7j")

[node name="Decay3" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "River Magnifier"

[node name="river_magnifier" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 1000.0
value = 20.0
script = ExtResource("7_vuo7j")

[node name="Label3" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Initial Water Height"

[node name="InitWater" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.05
script = ExtResource("7_vuo7j")

[node name="Label4" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Brush Water Height"

[node name="BrushWater" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.01
script = ExtResource("7_vuo7j")

[node name="Label5" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Brush Radius"

[node name="BrushRadius" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
min_value = 1.0
value = 3.0
allow_greater = true
script = ExtResource("7_vuo7j")

[node name="Label6" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Heightmap Size"

[node name="SpinBox" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 2048.0
value = 128.0
allow_greater = true
allow_lesser = true
script = ExtResource("7_vuo7j")

[node name="Noise Seed" type="Label" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
text = "Noise Seed
"

[node name="NoiseSeed" type="SpinBox" parent="UI (VBoxContainer)/GridContainer"]
layout_mode = 2
max_value = 0.0
allow_greater = true
allow_lesser = true
script = ExtResource("7_vuo7j")

[node name="Label2" type="Label" parent="UI (VBoxContainer)"]
layout_mode = 2
text = "Left mouse button places water.
Middle mouse button removes it.
Right mouse button controls the camera.
Mouse wheel/Ctrl/Alt modify camera speed.
Enjoy!"

[connection signal="toggled" from="UI (VBoxContainer)/GridContainer/Run" to="Fluidsim" method="_on_run_toggled"]
[connection signal="toggled" from="UI (VBoxContainer)/GridContainer/Accelerate" to="Fluidsim" method="_on_accelerate_toggled"]
[connection signal="pressed" from="UI (VBoxContainer)/GridContainer/Button" to="Fluidsim" method="_on_button_pressed"]
[connection signal="pressed" from="UI (VBoxContainer)/GridContainer/Button2" to="Fluidsim" method="_on_button_2_pressed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/AccelerationFactor" to="Fluidsim" method="_on_acceleration_factor_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/viscosity" to="Fluidsim" method="_on_viscosity_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/decay" to="Fluidsim" method="_on_decay_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/height_threshold" to="Fluidsim" method="_on_height_threshold_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/river_magnifier" to="Fluidsim" method="_on_river_magnifier_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/InitWater" to="Fluidsim" method="_on_init_water_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/BrushWater" to="Fluidsim" method="_on_brush_water_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/BrushRadius" to="Fluidsim" method="_on_brush_radius_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/SpinBox" to="Fluidsim" method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="UI (VBoxContainer)/GridContainer/NoiseSeed" to="Fluidsim" method="_on_noise_seed_value_changed"]
